# peekabo

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml
configs/: example.yaml  synthetic-demo.yaml  synthetic-multitarget.yaml  targets.yaml
examples/: README.md  generate_synthetic_capture.py
src/peekabo/: __init__.py  cli.py
src/peekabo/api/: app.py
src/peekabo/capture/: __init__.py  live.py  sources.py  synthetic.py
src/peekabo/data/: __init__.py  readers.py  sampling.py  splits.py  writers.py
src/peekabo/evaluation/: __init__.py  holdout.py  plots.py  prequential.py  reports.py
src/peekabo/features/: __init__.py  encoders.py  extract.py  selection.py
src/peekabo/inference/: __init__.py  aggregate.py  checkpoints.py  classify.py
src/peekabo/labeling/: filters.py  labelers.py  targets.py
src/peekabo/models/: __init__.py  base.py  registry.py
src/peekabo/parsing/: dot11.py
src/peekaboo/: calibration.py  cli.py  comparison.py  config.py  dashboard.py  runner.py  setup.py
src/peekaboo/api/: __init__.py  app.py
src/peekaboo/capture/: inspect.py  live.py  sources.py  synthetic.py
src/peekaboo/data/: __init__.py  sampling.py  splits.py  writers.py
src/peekaboo/evaluation/: __init__.py  holdout.py  metrics.py  prequential.py  reports.py
src/peekaboo/features/: __init__.py  encoders.py  extract.py  selection.py
src/peekaboo/inference/: aggregate.py  checkpoints.py  classify.py  presence.py
src/peekaboo/labeling/: __init__.py  filters.py  labelers.py  targets.py
src/peekaboo/models/: __init__.py  registry.py
src/peekaboo/parsing/: __init__.py  dot11.py  radiotap.py  records.py
src/wifi_id/: cli.py  config.py
src/wifi_id/api/: __init__.py  app.py
src/wifi_id/capture/: live.py  sources.py
tests/: test_calibration.py  test_capture_inspect.py  test_cli.py  test_comparison.py  test_dashboard.py  test_demo_pipeline.py  test_dot11_mapping.py  test_features.py  test_labeling.py  test_metrics_prequential.py  test_models.py  test_presence.py  test_presence_cli.py  test_radiotap.py  test_runner.py  test_sampling_splits.py  test_setup.py  test_synthetic_capture.py
(+23 files in other folders)
