[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "peekaboo"
version = "0.1.0"
description = "Passive per-frame device identification for encrypted 802.11 captures."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "polars>=0.20",
  "pyarrow>=15",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "river>=0.24.2",
  "scapy>=2.5",
  "scikit-learn>=1.4",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
peekaboo = "peekaboo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/peekaboo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
