[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "peekaboo"
version = "0.1.0"
description = "Passive per-frame device identification for encrypted 802.11 captures."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "matplotlib>=3.10.8",
  "numpy>=1.26",
  "polars>=0.20",
  "pyarrow>=15",
  "pydantic>=2.6",
  "pydantic-settings>=2.13.1",
  "PyYAML>=6.0",
  "river>=0.24.2",
  "scapy>=2.5",
  "scikit-learn>=1.8.0",
  "typer>=0.24.1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest-cov>=7.0",
  "pytest>=9.0.3",
  "ruff>=0.4",
]

[project.scripts]
peekaboo = "peekaboo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/peekaboo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--cov=src/peekaboo",
  "--cov-report=term-missing",
  "--cov-fail-under=70",
]

[tool.coverage.run]
branch = true
source = ["src/peekaboo"]
omit = [
  "src/peekaboo/__init__.py",
  "src/peekaboo/*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  'if __name__ == "__main__":',
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
